--- a/SCHERP/Views/Shared/_PartialLeftMenu.cshtml
+++ b/SCHERP/Views/Shared/_PartialLeftMenu.cshtml
@@ -28,7 +28,7 @@
                 </a>
                 <ul class="treeview-menu">
                     <li>
-                        <a href="@Url.Content(@"~/Users/index")"><i class="fa fa-circle-o"></i> Manage User</a>
+                        <a href="@Url.Content(@"~/User/index")"><i class="fa fa-circle-o"></i> Manage User</a>
                     </li>
                     <li>
                         <a href="@Url.Content(@"~/SchoolSession/index")"><i class="fa fa-circle-o"></i> Manage Session</a>
