--- a/SCHERP/Views/Account/Login.cshtml
+++ b/SCHERP/Views/Account/Login.cshtml
@@ -68,14 +68,14 @@
 
     <div class="form-group">
         <div class="col-md-12" align="center">
-            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+            @Html.TextBoxFor(m => m.Email, new { @class = "form-control", @placeholder="Enter User Email" })
             @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
         </div>
     </div>
 
     <div class="form-group">
         <div class="col-md-12" align="center">
-            @Html.PasswordFor(m => m.Password, new { @class = "form-control", @AutoComplete = "off" })
+            @Html.PasswordFor(m => m.Password, new { @class = "form-control", @AutoComplete = "off", @placeholder = "Enter User Password" })
             @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
         </div>
     </div>
