--- a/SCHERP/Views/Error/Error404.cshtml
+++ b/SCHERP/Views/Error/Error404.cshtml
@@ -1,9 +1,10 @@
 ﻿
 @{
-    ViewBag.Title = "Exams And Records";
-    ViewBag.SubTitle = "Index";
+    ViewBag.Title = "Request";
+    ViewBag.SubTitle = "Error404";
     Layout = "~/Views/Shared/_LayoutMaster.cshtml";
 }
+
 @section usage{
 
     <link rel="stylesheet" type="text/css" href="@Url.Content("~/Content/css/sweetalert2.min.css")">
@@ -13,7 +14,7 @@
 <div class="row">
     <div class="col-md-12">
         <div class="btn btn-group" style="padding-left: 0">
-            <a href="@Url.Action("Create", "ExamsAndRecords")" class="btn btn-sm btn-default"><i class="glyphicon glyphicon-plus">&nbsp;Create</i></a>
+            <a href="@Url.Action("Index", "User")" class="btn btn-sm btn-default"><i class="glyphicon glyphicon-list">&nbsp;List</i></a>
             @*<button class="btn btn-sm btn-default"><i class="glyphicon glyphicon-eye-open">&nbsp;View</i></button>
                 <button class="btn btn-sm btn-default"><i class="glyphicon glyphicon-trash">&nbsp;Delete</i></button>*@
         </div>
@@ -23,15 +24,6 @@
         </div>
     </div>
 </div>
-<div class="row">
-    <div class="col-md-12">
-       
-    </div>
-</div>
-
-
-
-
 
 
 @section Scripts {
