--- a/SCHERP/Views/SchoolSession/Create.cshtml
+++ b/SCHERP/Views/SchoolSession/Create.cshtml
@@ -14,20 +14,28 @@
 
 <div class="row">
     <div class="col-md-10 col-md-offset-1">
-        <div class="form-horizontal page-form" id="pageForm" role="form">
+        @*<form action="@Url.Content(@"~/SchoolSession/Create")" method="POST" class="form-horizontal page-form" id="pageForm" role="form">*@
+
+        @using (Html.BeginForm("Create", "SchoolSession", FormMethod.Post, new { @class = "form-horizontal page-form", @id = "pageForm", @role = "form" }))
+        {
+            @Html.AntiForgeryToken()
+            @*@Html.ValidationSummary(false, "Fields marked red are important!", new { @class = "text-danger" })*@
+
             <div class="col-md-10">
                 <div class="row">
                     <div class="row">
                         <div class="col-md-4">
                             <div class="form-group">
                                 Session: <span class="lblImportant">*</span><br />
-                                @Html.TextBoxFor(m => m.Session, new {@class = "form-control", @required = "required", @type = "text", @autocomplete = "off", @placeholder = "2014/2015"})
+                                @Html.TextBoxFor(m => m.Session, new { @class = "form-control", @required = "required", @type = "text", @autocomplete = "off", @placeholder = "2014/2015" })
+                                @Html.ValidationMessageFor(m => m.Session, "", new { @class = "text-danger" })
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="form-group">
                                 Year: <span class="lblImportant">*</span><br />
-                                @Html.TextBoxFor(m => m.Year, new {@class = "form-control", @required = "required", @type = "text", @autocomplete = "off", @placeholder = "2015"})
+                                @Html.TextBoxFor(m => m.Year, new { @class = "form-control", @required = "required", @type = "text", @autocomplete = "off", @placeholder = "2015" })
+                                @Html.ValidationMessageFor(m => m.Year, "", new { @class = "text-danger" })
                             </div>
                         </div>
                         <div class="col-md-4">
@@ -37,12 +45,13 @@
                                     var selectList = new SelectList(
                                         new List<SelectListItem>
                                         {
-                                            new SelectListItem {Text = "1ST TERM", Value = "1ST TERM"},
-                                            new SelectListItem {Text = "2ND TERM", Value = "2ND TERM"},
-                                            new SelectListItem {Text = "3RD TERM", Value = "3RD TERM"},
+                                                new SelectListItem {Text = "1ST TERM", Value = "1ST TERM"},
+                                                new SelectListItem {Text = "2ND TERM", Value = "2ND TERM"},
+                                                new SelectListItem {Text = "3RD TERM", Value = "3RD TERM"},
                                         }, "Value", "Text");
                                 }
-                                @Html.DropDownListFor(m => m.Term, selectList, "== Select TERM ==", new {@class = "form-control", @required = "required"})
+                                @Html.DropDownListFor(m => m.Term, selectList, "== Select TERM ==", new { @class = "form-control", @required = "required" })
+                                @Html.ValidationMessageFor(m => m.Term, "", new { @class = "text-danger" })
                             </div>
                         </div>
                     </div>
@@ -50,18 +59,20 @@
                         <div class="col-md-4">
                             <div class="form-group">
                                 School Starts: <span class="lblImportant">*</span><br />
-                                @Html.TextBoxFor(m => m.SchoolStart, new { @class = "form-control", @required = "required", @type = "text", @autocomplete = "off", @placeholder = "dd/mm/yyyy" })
+                                @Html.TextBoxFor(m => m.SchoolStart, new { @class = "form-control", @required = "required", @type = "text", @autocomplete = "off", @placeholder = "mm/dd/yyyy" })
+                                @Html.ValidationMessageFor(m => m.SchoolStart, "", new { @class = "text-danger" })
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="form-group">
                                 School Ends: <span class="lblImportant">*</span><br />
-                                @Html.TextBoxFor(m => m.SchoolEnd, new {@class = "form-control", @required = "required", @type = "text", @autocomplete = "off", @placeholder = "dd/mm/yyyy"})
+                                @Html.TextBoxFor(m => m.SchoolEnd, new { @class = "form-control", @required = "required", @type = "text", @autocomplete = "off", @placeholder = "mm/dd/yyyy" })
+                                @Html.ValidationMessageFor(m => m.SchoolEnd, "", new { @class = "text-danger" })
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="form-group">
-                                School Days: <br />
+                                School Days:<br />
                                 @Html.TextBox("SchoolDays", null, new { @class = "form-control", @type = "text", @readonly = "readonly" })
                             </div>
                         </div>
@@ -85,10 +96,11 @@
                         </div>
                     </div>
                 </div>
-                @Html.Hidden("TxtUrl", @Url.Content(@"~/SchoolSession/CreateSession"))
-                <button class="pull-right btn-login" id="btnSession" name="btnSession" type="button">Save Entry</button>
+                <button class="pull-right btn-login" id="btnSession" name="btnSession" type="submit">Save Entry</button>
+
             </div>
-        </div>
+                                    }
+        @*</form>*@
     </div>
 </div>
 
@@ -96,14 +108,12 @@
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 
-   <script type="text/javascript" src="@Url.Content("~/Content/js/bootstrap-datepicker.min.js")"></script>
+    <script type="text/javascript" src="@Url.Content("~/Content/js/bootstrap-datepicker.min.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Content/js/sweetalert2.min.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Content/js/SweetAlertMethods.js")"></script>
 
     <script type="text/javascript" src="@Url.Content("~/Content/js/MyCustomJs.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Content/js/schoolsession.js")"></script>
-
-
 
 }
 
