user controller things

--- a/SCHERP/Views/User/Edit.cshtml
+++ b/SCHERP/Views/User/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model SCHERP.Models.UsersViewModel
+﻿@model SCHERP.Models.ApplicationUser
 @{
     ViewBag.Title = "User";
     ViewBag.SubTitle = "Edit";
